Modify as per Findbugs suggestion Method invokes inefficient Number constructor; use static valueOf instead